--- a/index.html
+++ b/index.html
@@ -437,11 +437,11 @@
                                                 <li>
                                                     <div class="list_inner">
                                                         <div class="time">
-                                                            <span>2019 - present</span>
+                                                            <span>2023 - present</span>
                                                         </div>
                                                         <div class="place">
-                                                            <h3>M-World</h3>
-                                                            <span>Research Assistant</span>
+                                                            <h3>BSMMU</h3>
+                                                            <span>Technical Specialist - Research</span>
                                                         </div>
                                                     </div>
                                                 </li>
