Edit BURO App privacy policy

--- a/buro-app-privacy-policy.html
+++ b/buro-app-privacy-policy.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Privacy Policy - BURO BANGLADESH</title>
+    <title>Privacy Policy - BURO BANGLADESH APP</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <style>
@@ -107,15 +107,15 @@
 <body>
 <div class="container">
     <span class="badge">Privacy Policy</span>
-    <h1>Privacy Policy for YOUR_APP_NAME</h1>
-    <p class="meta">
+    <h1>Privacy Policy for স্বাস্থ্য শিক্ষা বার্তা</h1>
+    <!-- <p class="meta">
         Effective date: <strong>[Insert date]</strong><br>
         Last updated: <strong>[Insert date]</strong>
-    </p>
+    </p> -->
 
     <p>
-        This Privacy Policy describes how <strong>YOUR_COMPANY_NAME</strong> (“we”, “our”, or “us”) handles
-        information when you use the <strong>YOUR_APP_NAME</strong> mobile application (the “App”).
+        This Privacy Policy describes how <strong>BURO BANGLADESH</strong> (“we”, “our”, or “us”) handles
+        information when you use the <strong>স্বাস্থ্য শিক্ষা বার্তা</strong> mobile application (the “App”).
         The App provides access to educational and training materials such as videos, images, and PDF documents
         for trainers and users, including those in remote areas with limited internet connectivity.
     </p>
@@ -264,12 +264,11 @@
             If you have any questions or concerns about this Privacy Policy or our data practices, please contact us:
         </p>
         <p>
-            <strong>YOUR_COMPANY_NAME</strong><br>
+            <strong>BURO BANGLADESH</strong><br>
             Website:
-            <a href="https://YOUR_WEBSITE_URL" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.burobd.org/" target="_blank" rel="noopener noreferrer">
                 https://YOUR_WEBSITE_URL
-            </a><br>
-            Email: <a href="mailto:YOUR_CONTACT_EMAIL">YOUR_CONTACT_EMAIL</a>
+            </a>
         </p>
     </div>
 </div>
